--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -800,7 +800,25 @@ img {
 }
 
 /*========== SCROLL BAR ==========*/
+@media screen and (max-width: 350px) {
+  .container{
+    margin-left: var(--mb-1);
+    margin-right: var(--mb-1);
+  }
+  .nav__menu{
+    padding: 2rem .25rem 4rem ;
+  }
+  .nav__list{
+    column-gap: 0;
+  }
+  .home__content{
+    grid-template-columns: .25fr 3fr ;
+  }
+  .home__blob{
+    width: 180px;
+  }
 
+}
 
 /*==================== MEDIA QUERIES ====================*/
 /* For small devices */
