--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -817,6 +817,12 @@ img {
   .home__blob{
     width: 180px;
   }
+  .skills__title{
+    font-size: var(--normal-font-size);
+  }
+  .qualification__data{
+    gap: .5rem;
+  }
 
 }
 
