--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -837,6 +837,13 @@ img {
   .home__data{
     grid-column: initial;
   }
+  .home_img{
+    order: 1;
+    justify-self: center;
+  }
+  .about_container{
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 /* For large devices */
