--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -846,4 +846,20 @@ img {
   }
 }
 
+@media screen and (min-width: 939px) {
+  .container{
+    margin-left: auto;
+    margin-right: auto;
+  }
+  body{
+    margin: 0;
+  }
+  .section{
+    padding: 6rem 0 2rem;
+  }
+  .section__subtitle{
+    margin-bottom: 4rem;
+    
+  }
+}
 /* For large devices */
